# FastAPI_x_Typer-CLI

./: README.md  main.py  pyproject.toml
.specstory/history/: 2025-08-20_09-57Z-using-addrequest-for-cli-interface-creation.md  2025-08-20_10-40Z-change-command-to-add-in-tyrocli-py.md
app/: api.py  autocli.py  cli.py  schemas.py  service.py  tyrocli.py
